# diagram_rust

./: Cargo.toml  Makefile
bezier/: Cargo.toml
diagram/: Cargo.toml
diagram/src/: grid.rs  layout.rs  lib.rs  main.rs
diagram/src/constants/: attributes.rs  elements.rs  mod.rs
diagram/src/diagram/: color.rs  descriptor.rs  diagram.rs  element.rs  element_content.rs  element_error.rs  element_header.rs  element_layout.rs  element_scope.rs  font.rs  mod.rs  svg.rs  text.rs  traits.rs  types.rs
diagram/src/diagram/elements/: group.rs  mod.rs  path.rs  shape.rs  text.rs  use_ref.rs
diagram/src/diagram/svg/: generate_svg.rs  mod.rs  svg.rs  svg_element.rs  svg_element_iter.rs  svg_error.rs
diagram/src/diagram_ml/: bad_xml_element.rs  diagram_ml.rs  error.rs  error_list.rs  ml_event.rs  ml_reader.rs  mod.rs  name_ids.rs
diagram/src/geometry/: bezier.rs  polygon.rs  rectangle.rs  transform.rs
diagram/src/grid/: equation_set.rs  grid_cell_data.rs  grid_data.rs  grid_dimension.rs  grid_placement.rs  link.rs  lup_decomposition.rs  node.rs  resolver.rs  traits.rs
diagram/src/layout/: bezier.rs  grid.rs  grid_cell_data.rs  grid_data.rs  grid_dimension.rs  grid_placement.rs  layout.rs  layout_box.rs  layout_record.rs  mod.rs  placement.rs  point.rs  polygon.rs  rectangle.rs
examples/: colors.dml  errors.dml  example_1.dml  example_2.dml  grid.dml  group.dml  i10.dml  markers.dml  overlay.dml  path.dml  rotate.dml  rotate2.dml  rotate3.dml  simple.dml  style.dml  stylesheet.dml  temp.dml  text.dml  use.dml
fonts/: Cargo.toml
geometry/: Cargo.toml
(+137 files in other folders)
