[package]
name = "diagram"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "~2.27.0"
xml-rs = "0.8.3"
lazy_static = "1.2.0"
geo-nd = "0.1.1"
geometry    = { path="../geometry", version="0.1.0" }
stylesheet  = { path="../stylesheet", version="0.1.0" }
hml-rs = "0.0.2"
indent-display = "0.1.0"

